--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   get_it: ^7.2.0
   cupertino_icons: ^1.0.2
   convex_bottom_bar: ^3.1.0+1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
