--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   convex_bottom_bar: ^3.1.0+1
   provider: ^6.0.5
+  dio: ^4.0.6
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
