--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,20 +15,27 @@ dependencies:
   provider: ^6.0.5
   dio: ^4.0.6
   hive: ^2.2.3
+  flutter_form_builder: ^7.7.0
+  form_builder_validators: ^8.4.0
+  flutter_secure_storage: ^7.0.1
+  path_provider: ^2.0.12
+  auto_route: ^5.0.4
+  auto_route_generator: ^5.0.3
+  jwt_decode: ^0.3.1
+  dio_smart_retry: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner: ^2.3.3
 
 flutter:
 
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
